<resources>
    <string name="app_name">AchieveMe</string>
    <string name="email_hint">E-Mail</string>
    <string name="password_hint">Password</string>
    <string name="register_button_text">Зарегистрироваться</string>
    <string name="login_button_text">Войти</string>
    <string name="userName_hint">Имя пользоватея</string>

    <string name="achiveimage_1">Войти</string>

    <string name="ach1_text">Bleeding Coco</string>

    <!-- android_large___1 strings -->
    <string name="ek_img_content">ExportKit Image</string>
    <string name="__________________string"> </string>
    <string name="____string"></string>
    <string name="______string">:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="information_photo">Размер фото не должен превышать 5 мб.\nНа фото должно быть подтверждение достижения, соответствующее описанию.</string>
    <string name="seasonsChellendge">Сезонный челлендж</string>

    <string-array name="options_array">
        <item>Опция 1</item>
        <item>Опция 2</item>
        <!-- Добавьте другие опции, если необходимо -->
    </string-array>


</resources>