<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Primary"
    android:id="@+id/activity_start_main_constrainLayout"
    tools:context=".StartMainActivity">

    <Button
        style="@style/button_style"
        android:id="@+id/activity_start_main_loginButton"
        app:layout_constraintTop_toTopOf="@id/activity_start_main_guideline"
        app:layout_constraintBottom_toTopOf="@+id/activity_start_main_regButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        android:text="@string/login_button_text"
        android:visibility="visible"
        android:onClick="StarActivity_loginButtonClick"
        />


    <Button
        style="@style/button_style"
        android:id="@+id/activity_start_main_regButton"
        android:layout_marginBottom="60dp"
        app:layout_constraintTop_toBottomOf="@+id/activity_start_main_loginButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/register_button_text"
        android:visibility="visible"
        android:onClick="StarActivity_regButtonClick"
        />
<!--    Временные размеры Логотипа, пока нет основго изображения. Потом будут разные размеры под разные разрешения-->
    <ImageView
        android:id="@+id/activity_start_main_logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/activity_start_main_textLogo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        android:src="@drawable/ellipse_12"
        android:visibility="visible"
        android:contentDescription="TODO" />

    <TextView
        android:id="@+id/activity_start_main_textLogo"
        style="@style/text_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        app:layout_constraintTop_toBottomOf="@id/activity_start_main_logo"
        app:layout_constraintBottom_toTopOf="@id/activity_start_main_guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/activity_start_main_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5"/>




</androidx.constraintlayout.widget.ConstraintLayout>